--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <i class="fas fa-search"></i>
                 <input type="text" placeholder="Search for country...">
             </div>
-            <select name="" id="">
+            <select>
                 <option value="all" selected>All</option>
             </select>
         </div>
